Now uses .ini for serial port data. Plus other small changes

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,10 @@
 [GENERAL_SETTINGS]
 LOGS_PATH: './logs'
-DATA_PATH: './data'
-EVENTS_PATH: './data/events'
+DATA_PATH: '/home/pi/fatcat-files/data'
+EVENTS_PATH: '/home/pi/fatcat-files/data/events'
 
 [TCP_INTERFACE]
 HOST_NAME: 'localhost'
+
+[SERIAL_SETTINGS]
+SERIAL_PORT_DESCRIPTION: 'nano-TD'
