--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@ DATA_PATH: '/home/pi/fatcat-files/data'
 EVENTS_PATH: '/home/pi/fatcat-files/data/events'
 
 [TCP_INTERFACE]
-HOST_NAME: 'localhost'
+HOST_NAME: '127.0.0.1'
 
 [SERIAL_SETTINGS]
 SERIAL_PORT_DESCRIPTION: 'nano-TD'
