--- a/config.ini
+++ b/config.ini
@@ -8,3 +8,7 @@ HOST_NAME: '127.0.0.1'
 
 [SERIAL_SETTINGS]
 SERIAL_PORT_DESCRIPTION: 'nano-TD'
+
+[GRAPH_SETTINGS]
+PLOT_STYLE: 'ggplot'
+FILE_FORMAT: 'pdf'
