Script for averaging event files

--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,7 @@ SERIAL_PORT_DESCRIPTION: 'nano-TD'
 [GRAPH_SETTINGS]
 PLOT_STYLE: 'ggplot'
 FILE_FORMAT: 'pdf'
+
+[DATA_ANALYSIS]
+BASELINE_PATH: '/home/pi/fatcat-files/data/baseline'
+BASELINE_FILE: 'zero_event.csv'
