--- a/config.ini
+++ b/config.ini
@@ -12,6 +12,7 @@ SERIAL_PORT_DESCRIPTION: 'nano-TD'
 [GRAPH_SETTINGS]
 PLOT_STYLE: 'ggplot'
 FILE_FORMAT: 'pdf'
+ERROR_EVERY: 4
 
 [DATA_ANALYSIS]
 BASELINE_PATH: '/home/pi/fatcat-files/data/baseline'
