--- a/config.ini
+++ b/config.ini
@@ -17,3 +17,5 @@ ERROR_EVERY: 4
 [DATA_ANALYSIS]
 BASELINE_PATH: '/home/pi/fatcat-files/data/baseline'
 BASELINE_FILE: 'zero_event.csv'
+SUMMARY_PATH:  '/home/pi/fatcat-files/data/summaries'
+SUMMARY_FILE:   'summary_output.csv'
