--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,7 @@ SERIAL_PORT_DESCRIPTION: 'nano-TD'
 
 [GRAPH_SETTINGS]
 PLOT_STYLE: 'ggplot'
-FILE_FORMAT: 'pdf'
+FILE_FORMAT: 'svg'
 ERROR_EVERY: 4
 
 [DATA_ANALYSIS]
@@ -19,3 +19,4 @@ BASELINE_PATH: '/home/pi/fatcat-files/data/baseline'
 BASELINE_FILE: 'zero_event.csv'
 SUMMARY_PATH:  '/home/pi/fatcat-files/data/summaries'
 SUMMARY_FILE:   'summary_output.csv'
+INTEGRAL_LENGTH: 65
