integral now reads length settings from ini file

--- a/config.ini
+++ b/config.ini
@@ -20,3 +20,4 @@ BASELINE_FILE: 'zero_event.csv'
 SUMMARY_PATH:  '/home/pi/fatcat-files/data/summaries'
 SUMMARY_FILE:   'summary_output.csv'
 INTEGRAL_LENGTH: 65
+EVENT_LENGTH: 120
