Added first modifications for extended variable mode

--- a/config.ini
+++ b/config.ini
@@ -5,9 +5,23 @@ EVENTS_PATH: '/home/pi/fatcat-files/data/events'
 
 [TCP_INTERFACE]
 HOST_NAME: '127.0.0.1'
+HOST_PORT: 10000
 
 [SERIAL_SETTINGS]
 SERIAL_PORT_DESCRIPTION: 'nano-TD'
+SERIAL_BAUDRATE: 115200
+SERIAL_PARITY: serial.PARITY_NONE
+SERIAL_STOPBITS: serial.STOPBITS_ONE
+SERIAL_BYTESIZE: serial.EIGHTBITS
+SERIAL_TIMEOUT: 1
+
+[LOGGER]
+HEADER: 'extras/columns.txt'
+BUFFER: 30
+SENSE: False
+DATAFILE: 'FATCAT'
+EXTENSION: '.txt'
+SN: True
 
 [GRAPH_SETTINGS]
 PLOT_STYLE: 'ggplot'
