--- a/launchers/config.template
+++ b/launchers/config.template
@@ -1,5 +1,6 @@
 # Variables required for launchers
 today=`date '+%Y%m%d'`
+yesterday=`date --date="1 day ago" '+%Y-%m-%d'`
 # Newest generated datafile
 file1="$(ls -t /home/pi/fatcat-files/data/* | head -1)"
 # File to output the summary
