baseline_length variable added to config.ini

--- a/config.template
+++ b/config.template
@@ -31,6 +31,7 @@ ERROR_EVERY: 4
 [DATA_ANALYSIS]
 BASELINE_PATH: '/home/pi/fatcat-files/data/baseline'
 BASELINE_FILE: 'zero_event.csv'
+BASELINE_LENGTH: 10
 SUMMARY_PATH:  '/home/pi/fatcat-files/data/summaries'
 SUMMARY_FILE:   'summary_output.csv'
 INTEGRAL_LENGTH: 65
