added multipeak guass fitting function for event

--- a/config.template
+++ b/config.template
@@ -33,7 +33,8 @@ BASELINE_PATH: '/home/pi/fatcat-files/data/baseline'
 BASELINE_FILE: 'zero_event.csv'
 BASELINE_LENGTH: 10
 SUMMARY_PATH:  '/home/pi/fatcat-files/data/summaries'
-SUMMARY_FILE:   'summary_output.csv'
+SUMMARY_FILE:  'summary_output.csv'
+FIT_FILE:      'fit_output.csv'
 INTEGRAL_LENGTH: 65
 EVENT_LENGTH: 120
 
