--- a/launchers/config.template
+++ b/launchers/config.template
@@ -1,6 +1,7 @@
 # Variables required for launchers
 today=`date '+%Y%m%d'`
 yesterday=`date --date="1 day ago" '+%Y-%m-%d'`
+last="37"
 # Newest generated datafile
 file1="$(ls -t /home/pi/fatcat-files/data/* | head -1)"
 # File to output the summary
