--- a/launchers/config.template
+++ b/launchers/config.template
@@ -1,6 +1,7 @@
 # Variables required for launchers
 today=`date '+%Y%m%d'`
 yesterday=`date --date="1 day ago" '+%Y-%m-%d'`
+todayformat=`date '+%Y-%m-%d'`
 last="73hours"
 # Newest generated datafile
 file1="$(ls -t /home/pi/fatcat-files/data/* | head -1)"
