--- a/config.template
+++ b/config.template
@@ -28,6 +28,7 @@ PLOT_STYLE: 'ggplot'
 FILE_FORMAT: 'svg'
 ERROR_EVERY: 4
 XMAX: False
+YMAX: False
 
 [DATA_ANALYSIS]
 BASELINE_PATH: '/home/pi/fatcat-files/data/baseline'
