set the report title (dayplot) in the ini file

--- a/config.template
+++ b/config.template
@@ -29,6 +29,8 @@ FILE_FORMAT: 'svg'
 ERROR_EVERY: 4
 XMAX: False
 YMAX: False
+LATEST_NAME: False
+DATE_AXIS: False
 
 [DATA_ANALYSIS]
 BASELINE_PATH: '/home/pi/fatcat-files/data/baseline'
