--- a/config.template
+++ b/config.template
@@ -1,7 +1,6 @@
 [GENERAL_SETTINGS]
-LOGS_PATH: '/home/pi/fatcat-files/logs'
-DATA_PATH: '/home/pi/fatcat-files/data'
-EVENTS_PATH: '/home/pi/fatcat-files/data/events'
+LOGS_PATH: '/home/pi/ocu/logs'
+DATA_PATH: '/home/pi/ocu/data'
 
 [TCP_INTERFACE]
 HOST_NAME: '127.0.0.1'
@@ -19,7 +18,7 @@ SERIAL_TIMEOUT: 1
 HEADER: 'extras/columns.txt'
 BUFFER: 30
 SENSE: False
-DATAFILE: 'FATCAT'
+DATAFILE: 'OCU'
 EXTENSION: '.txt'
 SN: True
 
@@ -27,14 +26,6 @@ SN: True
 PLOT_STYLE: 'ggplot'
 FILE_FORMAT: 'svg'
 ERROR_EVERY: 4
-
-[DATA_ANALYSIS]
-BASELINE_PATH: '/home/pi/fatcat-files/data/baseline'
-BASELINE_FILE: 'zero_event.csv'
-SUMMARY_PATH:  '/home/pi/fatcat-files/data/summaries'
-SUMMARY_FILE:   'summary_output.csv'
-INTEGRAL_LENGTH: 65
-EVENT_LENGTH: 120
 
 [CALIBRATION]
 UV_CONSTANT: 545.45
